src/rust/items/snapshots/syn_state_machine__rust__items__functions__tests__concat_idents! (parse it_matches_complex_function).snap
---
source: src/rust/items/functions.rs
expression: "crate::parse::<Function<Infallible, Ident, Infallible, Ident>>(q.clone())"
---
Ok(
    Function {
        qualifiers: FunctionQualifiers {
            const: true,
            async: true,
            unsafe: true,
            extern_abi: Some(
                Some(
                    StringLit {
                        raw: "\"C\"",
                        value: None,
                        num_hashes: None,
                        start_suffix: 3,
                    },
                ),
            ),
        },
        id: Ident(
            hello,
        ),
        generic_parameters: Some(
            GenericParams {
                params: Interlace {
                    values: [
                        Ty(
                            Rep(
                                [],
                            ),
                            TypeParam {
                                id: Ident(
                                    T,
                                ),
                                bound: None,
                                ty: None,
                            },
                        ),
                    ],
                },
            },
        ),
        params: Paren(
            FunctionParameters {
                self_param: Some(
                    Shorthand(
                        Rep(
                            [],
                        ),
                        ShorthandSelf {
                            reference: None,
                        },
                    ),
                ),
                params: Interlace {
                    values: [
                        FunctionParamPattern(
                            Rep(
                                [],
                            ),
                            Ty(
                                Ident(
                                    v,
                                ),
                                Ident(
                                    i64,
                                ),
                            ),
                        ),
                    ],
                },
            },
            Span,
        ),
        ret: Some(
            Ident(
                T,
            ),
        ),
        where_clause: None,
        content: V0(
            FPunct(
                Span,
            ),
        ),
    },
)
