src/rust/items/snapshots/syn_state_machine__rust__items__functions__tests__concat_idents! (parse it_matches_shorthand_self).snap
---
source: src/rust/items/functions.rs
expression: "crate::parse::<SelfParam<Infallible, Infallible>>(q.clone())"
---
Ok(
    Shorthand(
        Rep(
            [],
        ),
        ShorthandSelf {
            reference: None,
        },
    ),
)
