src/rust/items/snapshots/syn_state_machine__rust__items__functions__tests__concat_idents! (parse it_matches_typed_self).snap
---
source: src/rust/items/functions.rs
expression: "crate::parse::<SelfParam<P<Infallible>, TypePath<Ident>>>(q.clone())"
---
Ok(
    Typed(
        Rep(
            [],
        ),
        TypedSelf {
            mutable: true,
            ty: HigherOrderPath {
                leading: false,
                segments: Interlace {
                    values: [
                        Generic(
                            Id(
                                Ident(
                                    Box,
                                ),
                            ),
                            GenericArgs {
                                args: Interlace {
                                    values: [
                                        Ty(
                                            Ident(
                                                Self,
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ),
                    ],
                },
            },
        },
    ),
)
