src/rust/items/snapshots/syn_state_machine__rust__items__functions__tests__concat_idents! (parse it_matches_typed_self_ref).snap
---
source: src/rust/items/functions.rs
expression: "crate::parse::<SelfParam<P<Infallible>, Type<P<Infallible>>>>(q.clone())"
---
Ok(
    Typed(
        Rep(
            [],
        ),
        TypedSelf {
            mutable: false,
            ty: NoBounds(
                ReferenceType(
                    ReferenceType {
                        lt: None,
                        mut: true,
                        ty: NoBounds(
                            TypePath(
                                HigherOrderPath {
                                    leading: false,
                                    segments: Interlace {
                                        values: [
                                            Bare(
                                                Id(
                                                    Ident(
                                                        Self,
                                                    ),
                                                ),
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ),
                    },
                ),
            ),
        },
    ),
)
