src/rust/items/snapshots/syn_state_machine__rust__items__functions__tests__it_matches_shorthand_self.snap
---
source: src/rust/items/functions.rs
expression: "insta_match_test!(+ parse SelfParam<Infallible, Infallible> : self)"
---
Ok(
    Shorthand(
        Rep(
            [],
        ),
        ShorthandSelf {
            reference: None,
        },
    ),
)
