src/rust/items/snapshots/syn_state_machine__rust__items__functions__tests__it_matches_typed_self.snap
---
source: src/rust/items/functions.rs
expression: "insta_match_test!(+ parse SelfParam<Infallible, TypePath<Ident>> : mut self :\n    Box < Self >)"
---
Ok(
    Typed(
        [],
        TypedSelf {
            mutable: true,
            ty: HigherOrderPath {
                leading: false,
                segments: Interlace {
                    values: [
                        Generic(
                            Id(
                                Ident(
                                    Box,
                                ),
                            ),
                            GenericArgs {
                                args: Interlace {
                                    values: [
                                        Ty(
                                            Ident(
                                                Self,
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ),
                    ],
                },
            },
        },
    ),
)
